--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Infinite Scroll</h1>
+  <h1>- Infinite Scroll -</h1>
+  <div class="loader" id="loader">
+    <img src="loader.svg" alt="loading animation">
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
