--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Title -->
+  <h2>Unsplash API</h2>
   <h1>- Infinite Scroll -</h1>
-  <div class="loader" id="loader">
+  <!-- Loader -->
+  <div class="loader" id="loader" hidden>
     <img src="loader.svg" alt="loading animation">
+  </div>
+  <!-- Image Container -->
+  <div class="image-container" id="image-container">
+    <img src="https://images.unsplash.com/photo-1605628694231-89f0b778305e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1463&q=80" alt="">
+    <img src="https://images.unsplash.com/photo-1605628694231-89f0b778305e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1463&q=80" alt="">
+    <img src="https://images.unsplash.com/photo-1605628694231-89f0b778305e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1463&q=80" alt="">
+
   </div>
   <script src="script.js"></script>
 </body>
