--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h2>Unsplash API</h2>
   <h1>- Infinite Scroll -</h1>
   <!-- Loader -->
-  <div class="loader" id="loader" hidden>
+  <div class="loader" id="loader">
     <img src="loader.svg" alt="loading animation">
   </div>
   <!-- Image Container -->
